feat(project): 添加了navigation的注解处理器
一共三个模块：
1. processor
2. core-api
3. annotation

--- a/config.gradle
+++ b/config.gradle
@@ -33,6 +33,7 @@ android {
                     manifest.srcFile 'src/main/manifest/AndroidManifest.xml'
                     java {
                         srcDirs 'src/main'
+                        exclude '**/debug/**'
                     }
                 }
             }
@@ -42,5 +43,4 @@ android {
         viewBinding = true
         dataBinding = true
     }
-
 }
