--- a/settings.gradle
+++ b/settings.gradle
@@ -24,3 +24,6 @@ include ':feature_theme'
 include ':module_mine'
 include ':module_community'
 include ':module_navigation'
+include ':lib_annotation'
+include ':lib_compiler'
+include ':lib_router_core'
