--- a/common/build.gradle
+++ b/common/build.gradle
@@ -28,10 +28,9 @@ android {
 
 }
 dependencies {
-    //aRouter
+    //javapoet
+    api 'com.squareup:javapoet:1.13.0'
 
-//    api 'com.alibaba:arouter-api:1.5.2'
-//    annotationProcessor 'com.alibaba:arouter-compiler:1.5.2'
     //声明所有的依赖
     //exoPlayer
     api "androidx.media3:media3-exoplayer:1.3.0"
@@ -51,7 +50,6 @@ dependencies {
     //dagger
     api 'com.google.dagger:dagger-android:2.51.1'
     api 'com.google.dagger:dagger-android-support:2.51.1'
-    api 'androidx.preference:preference:1.2.1'
     // if you use the support libraries
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.51.1'
     annotationProcessor 'com.google.dagger:dagger-compiler:2.51.1'
