feat(添加了用于room数据库的注解处理器): 从app壳工程获取db实例

--- a/common/src/main/manifest/AndroidManifest.xml
+++ b/common/src/main/manifest/AndroidManifest.xml
@@ -1,2 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest></manifest>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <uses-permission android:name="android.permission.INTERNET" />
+
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <!-- 如果您的应用程序还需要写入外部存储器，请添加以下权限 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+</manifest>
