--- a/module_navigation/build.gradle
+++ b/module_navigation/build.gradle
@@ -15,7 +15,14 @@ android {
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
+//        javaCompileOptions {
+//            annotationProcessorOptions {
+//                arguments = [
+//                        ROUTER_MODULE_NAME      : project.getName(),
+//                        ROUTER_MODULE_GRAPH_NAME: "app_graph"
+//                ]
+//            }
+//        }
     }
 
     buildTypes {
@@ -36,7 +43,7 @@ android {
 
 dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    if (isRunAlone.toBoolean()) {
+    if (!isRunAlone.toBoolean()) {
         implementation(project(':common'))
     } else {
         implementation(project(':common'))
@@ -44,6 +51,11 @@ dependencies {
         implementation project(':module_mine')
         implementation(project(':module_community'))
     }
+
+//    annotationProcessor(project(':lib_compiler'))
+//    implementation(project(':lib_annotation'))
+//    implementation(project(':lib_router_core'))
+
     //navigation
     def nav_version = "2.7.7"
     //Java language implementation
