--- a/common/build.gradle
+++ b/common/build.gradle
@@ -28,6 +28,16 @@ android {
 
 }
 dependencies {
+    //room数据库
+    def room_version = "2.6.1"
+    api "androidx.room:room-runtime:$room_version"
+    annotationProcessor "androidx.room:room-compiler:$room_version"
+    // optional - RxJava3 support for Room
+    api "androidx.room:room-rxjava3:$room_version"
+    // optional - Paging 3 Integration
+    api "androidx.room:room-paging:$room_version"
+    //eventbus
+    api 'org.greenrobot:eventbus:3.3.1'
     //javapoet
     api 'com.squareup:javapoet:1.13.0'
 
