--- a/lib_compiler/build.gradle
+++ b/lib_compiler/build.gradle
@@ -14,10 +14,10 @@ dependencies {
     //注解处理器
     implementation 'com.squareup:javapoet:1.13.0'
 
-    annotationProcessor 'com.google.auto.service:auto-service:1.0-rc7'
-    compileOnly 'com.google.auto.service:auto-service-annotations:1.0-rc7'
+    annotationProcessor 'com.google.auto.service:auto-service:1.1.1'
+    compileOnly 'com.google.auto.service:auto-service-annotations:1.1.1'
 
-    sourceCompatibility = JavaVersion.VERSION_1_7
-    targetCompatibility = JavaVersion.VERSION_1_7
-    api (project(':lib_annotation'))
+    sourceCompatibility = JavaVersion.VERSION_17
+    targetCompatibility = JavaVersion.VERSION_17
+    api(project(':lib_annotation'))
 }
