--- a/module_login/build.gradle
+++ b/module_login/build.gradle
@@ -13,15 +13,14 @@ android {
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        javaCompileOptions {
-            annotationProcessorOptions {
-                arguments = [
-                        ROUTER_MODULE_NAME      : project.getName(),
-                        //这个navigation表的id, 如<navigation android:id="@+id/nav_graph_module_one">
-                        ROUTER_MODULE_GRAPH_NAME: "login_graph"
-                ]
-            }
-        }
+//        javaCompileOptions {
+//            annotationProcessorOptions {
+//                arguments = [
+//                        ROUTER_MODULE_NAME      : project.getName(),
+//                        ROUTER_MODULE_GRAPH_NAME: "login_graph"
+//                ]
+//            }
+//        }
     }
 
     buildTypes {
@@ -36,19 +35,17 @@ android {
     }
 }
 dependencies {
-    implementation(project(':lib_annotation'))
-    annotationProcessor(project(':lib_compiler'))
-    implementation(project(':lib_router_core'))
+
+//    annotationProcessor(project(':lib_compiler'))
+//    implementation(project(':lib_annotation'))
+//    implementation(project(':lib_router_core'))
 
 
     implementation(project(':common'))
 
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.7.0'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.7.0'
-
-
     annotationProcessor 'com.google.dagger:dagger-compiler:2.51'
-
 
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.11.0'
