--- a/settings.gradle
+++ b/settings.gradle
@@ -27,3 +27,4 @@ include ':module_navigation'
 include ':lib_annotation'
 include ':lib_compiler'
 include ':lib_router_core'
+include ':lib_dao_compiler'
