feat(project): 添加了字符模块
通过这个模块可以进行书法文字智能评分，作为主要业务。

--- a/module_mine/build.gradle
+++ b/module_mine/build.gradle
@@ -41,6 +41,9 @@ dependencies {
 //    implementation(project(':lib_annotation'))
 //    implementation(project(':lib_router_core'))
 
+    annotationProcessor "androidx.room:room-compiler:2.6.1"
+    api "androidx.room:room-rxjava3:2.6.1"
+
     implementation 'androidx.preference:preference:1.2.1'
     implementation project(path: ':module_login')
     annotationProcessor 'com.google.dagger:dagger-android-processor:2.51.1'
