--- a/settings.gradle
+++ b/settings.gradle
@@ -28,3 +28,4 @@ include ':lib_annotation'
 include ':lib_compiler'
 include ':lib_router_core'
 include ':lib_dao_compiler'
+include ':module_character'
