--- a/common/build.gradle
+++ b/common/build.gradle
@@ -28,12 +28,21 @@ android {
 
 }
 dependencies {
+    // smartRefreshLayout
+    api 'io.github.scwang90:refresh-layout-kernel:2.1.0'      //核心必须依赖
+    api 'io.github.scwang90:refresh-header-classics:2.1.0'    //经典刷新头
+    api 'io.github.scwang90:refresh-header-radar:2.1.0'       //雷达刷新头
+    api 'io.github.scwang90:refresh-header-falsify:2.1.0'     //虚拟刷新头
+    api 'io.github.scwang90:refresh-header-material:2.1.0'    //谷歌刷新头
+    api 'io.github.scwang90:refresh-header-two-level:2.1.0'   //二级刷新头
+    api 'io.github.scwang90:refresh-footer-ball:2.1.0'        //球脉冲加载
+    api 'io.github.scwang90:refresh-footer-classics:2.1.0'    //经典加载
     //room数据库
     def room_version = "2.6.1"
     api "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
+    annotationProcessor "androidx.room:room-compiler:2.6.1"
     // optional - RxJava3 support for Room
-    api "androidx.room:room-rxjava3:$room_version"
+    api "androidx.room:room-rxjava3:2.6.1"
     // optional - Paging 3 Integration
     api "androidx.room:room-paging:$room_version"
     //eventbus
