--- a/module_navigation/build.gradle
+++ b/module_navigation/build.gradle
@@ -50,11 +50,14 @@ dependencies {
         implementation project(':module_login')
         implementation project(':module_mine')
         implementation(project(':module_community'))
+        implementation(project(':module_character'))
     }
 
 //    annotationProcessor(project(':lib_compiler'))
 //    implementation(project(':lib_annotation'))
 //    implementation(project(':lib_router_core'))
+    api "androidx.room:room-rxjava3:2.6.1"
+    annotationProcessor "androidx.room:room-compiler:2.6.1"
 
     //navigation
     def nav_version = "2.7.7"
