--- a/common/build.gradle
+++ b/common/build.gradle
@@ -28,6 +28,11 @@ android {
 
 }
 dependencies {
+    //高斯模糊
+    api 'com.github.bumptech.glide:glide:4.16.0'
+    annotationProcessor("com.github.bumptech.glide:compiler:4.16.0")
+    api 'jp.wasabeef:glide-transformations:4.3.0'
+
     // smartRefreshLayout
     api 'io.github.scwang90:refresh-layout-kernel:2.1.0'      //核心必须依赖
     api 'io.github.scwang90:refresh-header-classics:2.1.0'    //经典刷新头
