fix(community): 修改模块
修改社区模块，删除本地数据库，使用livedata监听错误，完善了mine模块

--- a/module_community/src/main/AndroidManifest.xml
+++ b/module_community/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
     <application
-
+        android:name="debug.DebugApplication"
         android:theme="@style/AppTheme">
         <activity
             android:name="debug.ModuleCommunityActivity"
