--- a/module_navigation/build.gradle
+++ b/module_navigation/build.gradle
@@ -49,7 +49,7 @@ dependencies {
         implementation(project(':common'))
         implementation project(':module_login')
         implementation project(':module_mine')
-        implementation(project(':module_community'))
+//        implementation(project(':module_community'))
         implementation(project(':module_character'))
     }
 
