fix(module): community更新
完善community模块，比赛，临帖模块

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -28,6 +28,9 @@ android {
 
 }
 dependencies {
+    //popupwindow
+    api 'io.github.razerdp:BasePopup:3.2.1'
+
     // PictureSelector basic (Necessary)
     api 'io.github.lucksiege:pictureselector:v3.11.2'
 
