feat(module): 修复
修复mine模块的查看粉丝和查看关注碎片

--- a/module_navigation/src/main/manifest/AndroidManifest.xml
+++ b/module_navigation/src/main/manifest/AndroidManifest.xml
@@ -4,11 +4,8 @@
 
     <application
         android:theme="@style/AppTheme"
-        tools:replace="android:label"
-        >
-
+        tools:replace="android:label">
         <activity
-
             android:name=".NavigationActivity"
             android:exported="true">
             <intent-filter>
