fix(project): 添加功能
添加文字识别功能，修改home的界面ui

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -28,6 +28,22 @@ android {
 
 }
 dependencies {
+    // To recognize Latin script
+    api 'com.google.mlkit:text-recognition:16.0.0'
+
+    // To recognize Chinese script
+    api 'com.google.mlkit:text-recognition-chinese:16.0.0'
+
+    // To recognize Devanagari script
+    api 'com.google.mlkit:text-recognition-devanagari:16.0.0'
+
+    // To recognize Japanese script
+    api 'com.google.mlkit:text-recognition-japanese:16.0.0'
+
+    // To recognize Korean script
+    api 'com.google.mlkit:text-recognition-korean:16.0.0'
+
+
     //popupwindow
     api 'io.github.razerdp:BasePopup:3.2.1'
 
