--- a/module_navigation/src/main/AndroidManifest.xml
+++ b/module_navigation/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
     <application
         android:name=".DebugApplication"
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/ic_launcher_foreground"
         android:label="@string/app_name"
         tools:replace="android:label"
         android:roundIcon="@mipmap/ic_launcher_round"
